--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Session Attendance Analyzer</title>
+    <title>Session Attendance Track</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
     <style>
         * {
@@ -307,7 +307,7 @@
         
         <div class="content">
             <div class="upload-section">
-                <h2>Please Upload Master Session Attendance</h2>
+                <h2>Please Upload Master Online Class Attendance Data</h2>
                 <label for="csvFile" class="file-upload">
                     <span class="upload-icon">📁</span>
                     Choose CSV File
