--- a/index.html
+++ b/index.html
@@ -301,8 +301,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Session Attendance Analyzer</h1>
-            <p>Upload and analyze your session attendance data with ease</p>
+            <h1>Attendance Analyzer</h1>
         </div>
         
         <div class="content">
