--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Attendance Analyzer</h1>
+            <h1>Attendance Track</h1>
         </div>
         
         <div class="content">
